# platform_checks

./: .clang-format  .gitignore  CMakeLists.txt  Project.xml  README.md
cmake/: CompilerOptions.cmake
src/: main.cpp
test/: CMakeLists.txt  catch.cpp  test_sample.cpp
